--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -101,16 +101,6 @@
                         </svg>
                         Analyze Damage
                     </button>
-
-                    <div class="divider-text"><span>or try a demo</span></div>
-
-                    <button class="btn btn-outline btn-full" id="demoBtn">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2">
-                            <path d="M13 2 3 14h9l-1 8 10-12h-9l1-8Z" />
-                        </svg>
-                        Run Demo Analysis
-                    </button>
                 </div>
 
                 <!-- Results Area -->
@@ -274,6 +264,7 @@
         </div>
     </footer>
 
+    <script src="/static/js/script.js"></script>
     <script src="/static/js/estimate.js"></script>
 </body>
 
